# cry-me

./: .gitignore  LICENSE  README.md  README_ANDROID_STUDIO.md  README_CRYME.md
.github/workflows/: bundle_cryme_app.yml  compile_cryme_app.yml
cryme_app/: .dockerignore  Dockerfile.bundle  Dockerfile.compile  Makefile  bundle_cryme_app.py  download_sdk.sh
cryme_app/element/: build.gradle  gradle.properties  settings.gradle
cryme_app/element/gradle/wrapper/: gradle-wrapper.properties
cryme_app/element/matrix-sdk-android/: .gitignore  build.gradle
cryme_app/element/olm-sdk/: build.gradle
cryme_app/element/olm-sdk/sources/: .gitignore  CMakeLists.txt  Windows64.cmake  common.mk  libolm.version  olm.pc.in
cryme_app/element/olm-sdk/sources/include/: module.modulemap
cryme_app/element/olm-sdk/sources/include/olm/: account.hh  attachment_utility.hh  base64.h  base64.hh  crypto.h  default_cipher.h  default_megolm_cipher.h  default_olm_cipher.h  error.h  inbound_group_session.h  megolm.h  memory.h  message.h  message.hh  olm.h  olm_export.h  outbound_group_session.h  pickle.h  pickle.hh  pickle_encoding.h  pk.h  prg_utility.hh  ratchet.hh  rsa_utility.hh  sas.h  session.hh  utility.hh
cryme_app/element/olm-sdk/sources/lib/crypto-algorithms/: base64.c  base64.h
cryme_app/element/olm-sdk/sources/lib/crypto-algorithms/aes/: .gitignore  aes.c  aes.h
cryme_app/element/olm-sdk/sources/lib/crypto-algorithms/ecc/: ecc.h  ecc_key-exchange.c  ecc_keygen.c  ecc_prg.c  ecc_signature.c  gf25519.c  gf25519.h  rnd.h  scalar.c  scalar.h  wei25519.c  wei25519.h
cryme_app/element/olm-sdk/sources/lib/crypto-algorithms/hmac/: .gitignore  hmac.c  hmac.h
cryme_app/element/olm-sdk/sources/lib/crypto-algorithms/key_derivation/: .gitignore  hkdf.c  hkdf.h  pbkdf2.c  pbkdf2.h
cryme_app/element/olm-sdk/sources/lib/crypto-algorithms/lcg/: .gitignore  lcg.c  lcg.h
cryme_app/element/olm-sdk/sources/lib/crypto-algorithms/modular_arithmetic_word/: .gitignore  modular_arithmetic_word.c  modular_arithmetic_word.h
cryme_app/element/olm-sdk/sources/lib/crypto-algorithms/rsa/: .gitignore  rsa.c  rsa.h
cryme_app/element/olm-sdk/sources/lib/crypto-algorithms/sha/: .gitignore  sha1.c  sha1.h  sha3.c  sha3.h  sha_struct.h
cryme_app/element/olm-sdk/sources/lib/crypto-algorithms/timestamp/: .gitignore  timestamp.c  timestamp.h
cryme_app/element/olm-sdk/sources/lib/crypto-algorithms/utilities/: utilities.c  utilities.h
cryme_app/element/olm-sdk/sources/src/: account.cpp  attachment_utility.cpp  base64.cpp  crypto.cpp  default_cipher.cpp  default_megolm_cipher.cpp  default_olm_cipher.cpp  error.c  inbound_group_session.c  megolm.c  memory.cpp  message.cpp  olm.cpp  outbound_group_session.c  pickle.cpp  pickle_encoding.c  pk.cpp  prg_utility.cpp  ratchet.cpp  rsa_utility.cpp  sas.c  session.cpp  utility.cpp
cryme_app/element/olm-sdk/src/main/: .gitignore  AndroidManifest.xml
cryme_app/element/olm-sdk/src/main/jni/: Android.mk  Application.mk  olm_account.cpp  olm_account.h  olm_attachment_utility.cpp  olm_attachment_utility.h  olm_inbound_group_session.cpp  olm_jni.h  (+19 more)
cryme_app/element/tools/: hs_diag.py  import_emojis.py  import_sas_strings.py
cryme_app/element/tools/release/: download_buildkite_artifacts.py
cryme_app/element/vector/: .gitignore  build.gradle
cryme_app/element/vector/src/main/: AndroidManifest.xml
cryme_app/element/yubikit-android/: .gitignore  Makefile  NEWS  README.adoc  build.gradle  gradle.properties  pom.gradle  publish.gradle  settings.gradle
cryme_app/element/yubikit-android/.github/workflows/: android.yml  scan.yml
cryme_app/element/yubikit-android/AndroidDemo/: README.adoc  build.gradle
cryme_app/element/yubikit-android/android/: README.adoc  build.gradle  publish.gradle
cryme_app/element/yubikit-android/core/: README.adoc  build.gradle
cryme_app/element/yubikit-android/doc/: Migration_1.0-2.0.adoc  publish.adoc
cryme_app/element/yubikit-android/gradle/wrapper/: gradle-wrapper.properties
cryme_app/element/yubikit-android/management/: README.adoc  build.gradle
cryme_app/element/yubikit-android/oath/: README.adoc  build.gradle
cryme_app/element/yubikit-android/piv/: README.adoc  build.gradle
cryme_app/element/yubikit-android/scripts/: wifiadb.sh
cryme_app/element/yubikit-android/testing/: build.gradle
cryme_app/element/yubikit-android/yubiotp/: README.adoc  build.gradle
cryme_app_emulation/: create_emulator_image.sh  identify_yubikeys_usb_bus.py  launch_emulator_usb.sh
cryme_server/: Makefile  docker-compose.build.yml  docker-compose.yml
cryme_server/src/nginx/: cryme.crt  cryme.key  synapse.conf
cryme_server/src/synapse/: Dockerfile  build-signature.py  build-synapse-config.py  homeserver-template.yaml  homeserver.yaml  run.sh  server-private-key.pem  verify_sig.py
cryme_server/src/synapse/sources/: .gitignore  setup.py
cryme_server/src/synapse/sources/docker/: configure_workers_and_start.py  start.py
cryme_server/src/synapse/sources/scripts/: generate_signing_key.py  move_remote_media_to_new_store.py
cryme_server/src/synapse/sources/scripts-dev/: check_signature.py  definitions.py  dump_macaroon.py  federation_client.py  hash_history.py  list_url_patterns.py  mypy_synapse_plugin.py  release.py  tail-synapse.py
cryme_server/src/synapse/sources/synapse/: __init__.py  event_auth.py  notifier.py  python_dependencies.py  server.py  types.py  visibility.py
cryme_server/src/synapse/sources/synmark/: __init__.py  __main__.py
cryme_server/src/synapse/sources/tests/: __init__.py  server.py  test_distributor.py  test_event_auth.py  test_federation.py  test_mau.py  test_metrics.py  test_phone_home.py  test_preview.py  test_server.py  test_state.py  test_terms_auth.py  test_test_utils.py  test_types.py  test_visibility.py  unittest.py  utils.py
(+3984 files in other folders)
